# quebec_v2

./: Dockerfile  README.md  app.py  dockerfile  driver.py  price.py  pricetest.py  pyproject.toml  requirements.txt  sample_portfolio.json  stock.json  stock_ex1.json  stock_ex2.json
.github/workflows/: security.yml
DOCS/: Black_Usage_and_Configuration.md  Flake8_Usage.md  SafetyTestSetup.md  Secure_Coding_Standard.md  UnitTest_Cleanup.md
JSON_Validation/: stock-schema.json  test_stock_hypothesis.py  validator.py
PriceApp/: price.py
Schemas/: stock-schema.json
UnitTests/: conftest.py  test_fuzz.py  test_price.py  test_schema_hypothesis.py
diagrams/: GitUML_PlantUML.puml  PriceApp_JSONValidation.puml  Security_Scanning.puml  UnitTests.puml  UnitTests_IncludingFuzz.puml  dependencies.puml  sequence2.puml  sequence_diagram.puml  stock-shema-json.puml
scripts/: convert_safety_to_sarif.py  trigger_safety.py
